# minecraft-updates

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.env  main.ts  package.json  start.sh  tsconfig.json
.github/workflows/: docker.yml
integrations/: index.ts  integration.ts
integrations/discord/: events.ts  functionality.ts  index.ts
integrations/discord/data/: config-test.json  config.json  pings.json
integrations/discord/events/: ready.ts
integrations/mastodon/: functionality.ts  index.ts
src/: changelog.ts  data.ts  index.ts  main.rs
src/util/: logger.ts  version.ts
