[package]
name = "minecraft-updates"
description = ""
version = "0.1.0"
authors = ["xKingDark"]
repository = "https://github.com/DarkGamerYT/minecraft-updates"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["discord", "discord-bot"]

[features]
default = ["reqwest/json", "reqwest/multipart"]
rustls-tls = ["reqwest/json", "reqwest/multipart", "reqwest/rustls-tls"]

[dependencies]
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = "0.12"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
dotenv = "0.15.0"
